
syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;

package au.coaas.cqc.proto;

import "CQPService.proto";

message CdqlResponse {
    string status = 1;
    string body = 2;
    string queryId = 3;
    CdqlAdmin admin = 4;
}

message CdqlAdmin {
    uint64 rtmax = 1;
    double price = 2;
    double rtpenalty = 3;
}

message ExecutionRequest
{
    string cdql = 1;
    int32 page = 2;
    int32 limit = 3;
    string queryid = 4;
    string token = 5;
    string criticality = 6;
}

message RegisterState {
    bool state = 1;
}

message EventRequest {
    string event = 1;
    string provider = 2;
}

message EventStats {
    double avgExecutionTime = 1;
    uint64 eventsProcessed = 2;
}

message Empty {}

message Subscription {
    string id = 1;
}

message CPMonitor {
    string contextID = 1;
    au.coaas.cqp.proto.ContextEntity contextEntity = 2;
}

message CordinatesIndex {
    string h3Address = 1;
    uint64 index = 2;
    double lat = 3;
    double lng = 4;
}

message Path {
    repeated uint64 path = 1;
    uint64 edge = 2;
    IndexCoordinate origin = 3;
    IndexCoordinate destination = 4;
    double distance = 5;
    uint64 zeroTime = 6;
}

message IndexCoordinate {
    uint64 index = 1;
    double latitude = 2;
    double longitude = 3;
}

service CQCService {
    rpc resetEventStats (Empty) returns (Empty);
    rpc removeMonitor (CPMonitor) returns (Empty);
    rpc getEventStats (Empty) returns (EventStats);
    rpc modifyCPMonitor (CPMonitor) returns (Empty);
    rpc execute (ExecutionRequest) returns (CdqlResponse);
    rpc changeRegisterState (RegisterState) returns (Empty);
    rpc unsubscribe (ExecutionRequest) returns (CdqlResponse);
    rpc handleSituation (EventRequest) returns (CdqlResponse);
    rpc cancelSubscription (Subscription) returns (RegisterState);
    rpc UpdateContextEntity (ExecutionRequest) returns (CdqlResponse);
    rpc RegisterContextEntity (ExecutionRequest) returns (CdqlResponse);
    rpc RegisterContextService (ExecutionRequest) returns (CdqlResponse);
    rpc registerContextConsumer (ExecutionRequest) returns (CdqlResponse);
}